@@ -18,6 +18,7 @@
 12. Animate mobile navigation 'pill'.
 13. Add sort options to 'All songs' and 'Compositions'
 14. Swipe to change volume on cover only.
+15. Always place now-playing rating stars over image.
 
 4.0.4
 ------
